# -*- mode: cmake; -*-
project(OpcodeCollisionDetector)

# Make sure the compiler can find include files from our Hello library.
include_directories (
	${OpcodeCollisionDetector_SOURCE_DIR}
	)

set(src
"./CdCache.cpp"
"./CdCache.h"
"./CdScene.cpp"
"./CdScene.h"
"./CdWrapper.cpp"
"./CdWrapper.h"
"./CollisionDetector_impl.cpp"
"./CollisionDetector_impl.h"
"./CollisionDetector_impl2.cpp"
"./CollisionDetector_impl2.h"
"./InsertCollisionPair.cpp"
"./OPC_AABBTree.cpp"
"./OPC_AABBTree.h"
"./OPC_BaseModel.cpp"
"./OPC_BaseModel.h"
"./OPC_BoxBoxOverlap.h"
"./OPC_Collider.cpp"
"./OPC_Collider.h"
"./OPC_Common.cpp"
"./OPC_Common.h"
"./OPC_IceHook.h"
"./OPC_MeshInterface.cpp"
"./OPC_MeshInterface.h"
"./OPC_Model.cpp"
"./OPC_Model.h"
"./OPC_OptimizedTree.cpp"
"./OPC_OptimizedTree.h"
"./OPC_Picking.cpp"
"./OPC_Picking.h"
"./OPC_PlanesAABBOverlap.h"
"./OPC_PlanesTriOverlap.h"
"./OPC_Settings.h"
"./OPC_SphereAABBOverlap.h"
"./OPC_SphereTriOverlap.h"
#"./OPC_SweepAndPrune.cpp"
#"./OPC_SweepAndPrune.h"
"./OPC_TreeBuilders.cpp"
"./OPC_TreeBuilders.h"
"./OPC_TreeCollider.cpp"
"./OPC_TreeCollider.h"
"./OPC_TriBoxOverlap.h"
"./OPC_TriTriOverlap.h"
"./OPC_VolumeCollider.cpp"
"./OPC_VolumeCollider.h"
"./Opcode.cpp"
"./Opcode.h"
"./StdAfx.cpp"
"./StdAfxColDet.h"
"./TriOverlap.cpp"
"./utilities.h"
"./Ice/IceAABB.cpp"
"./Ice/IceAABB.h"
"./Ice/IceAxes.h"
"./Ice/IceBoundingSphere.h"
"./Ice/IceContainer.cpp"
"./Ice/IceContainer.h"
"./Ice/IceFPU.h"
"./Ice/IceHPoint.cpp"
"./Ice/IceHPoint.h"
"./Ice/IceIndexedTriangle.cpp"
"./Ice/IceIndexedTriangle.h"
"./Ice/IceLSS.h"
"./Ice/IceMatrix3x3.cpp"
"./Ice/IceMatrix3x3.h"
"./Ice/IceMatrix4x4.cpp"
"./Ice/IceMatrix4x4.h"
"./Ice/IceMemoryMacros.h"
"./Ice/IceOBB.cpp"
"./Ice/IceOBB.h"
"./Ice/IcePairs.h"
"./Ice/IcePlane.cpp"
"./Ice/IcePlane.h"
"./Ice/IcePoint.cpp"
"./Ice/IcePoint.h"
"./Ice/IcePreprocessor.h"
"./Ice/IceRandom.cpp"
"./Ice/IceRandom.h"
"./Ice/IceRay.cpp"
"./Ice/IceRay.h"
"./Ice/IceRevisitedRadix.cpp"
"./Ice/IceRevisitedRadix.h"
"./Ice/IceSegment.cpp"
"./Ice/IceSegment.h"
"./Ice/IceTriangle.cpp"
"./Ice/IceTriangle.h"
"./Ice/IceTriList.h"
"./Ice/IceTypes.h"
"./Ice/IceUtils.cpp"
"./Ice/IceUtils.h"
#OPC_AABBCollider.cpp
#OPC_AABBCollider.h
#OPC_LSSAABBOverlap.h
#OPC_LSSCollider.cpp
#OPC_LSSCollider.h
#OPC_LSSTriOverlap.h
#OPC_OBBCollider.cpp
#OPC_OBBCollider.h
#OPC_PlanesCollider.cpp
#OPC_PlanesCollider.h
#OPC_RayAABBOverlap.h
#OPC_RayCollider.cpp
#OPC_RayCollider.h
#OPC_RayTriOverlap.h
#OPC_SphereCollider.cpp
#OPC_SphereCollider.h
	)


add_library(OpcodeCollisionDetector
	${src}
	)

